# gdps-android-public

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-apk.sh  build.gradle  install-patches.sh  settings.gradle  setup-apk.sh  sign-apk.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-full.yml  build-launcher.yml
app/: .gitignore  build.gradle
app/src/full/java/com/kyurime/geometryjump/: GeometryDashActivity.kt
app/src/launcher/: AndroidManifest.xml
app/src/launcher/java/com/kyurime/geometryjump/: GeometryDashActivity.kt  LoadErrorActivity.kt
app/src/launcher/res/layout/: activity_load_error.xml
app/src/launcher/res/values/: strings.xml  themes.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CCControlColourPickerSpriteSheet-uhd.plist  GJ_GameSheet-uhd.plist  GJ_GameSheet02-uhd.plist  GJ_LaunchSheet-uhd.plist  GJ_badgeSheet.plist  GJ_modificationsSheet-hd.plist  playerOutfits.plist
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/libaurav2/: .gitattributes  .gitignore  CMakeLists.txt  README.md
app/src/main/cpp/libaurav2/.github/workflows/: build-dev.yml
app/src/main/cpp/libaurav2/docs/: README.md  build-config.md  crash-reporter.md  ingame-config.md  jni-funcs.md  textures.md
app/src/main/cpp/libaurav2/include/base/: cmake_config.hpp.in  config.hpp  game_variables.hpp  hook_handler.hpp  hooks.hpp  jni_funcs.hpp  module.hpp  spdlog.hpp  spdlog_fill.hpp
app/src/main/cpp/libaurav2/include/classes/: advancedcolorselectwidget.hpp  controlleroverlay.hpp  crashhelperpopup.hpp  loadingfailedhijacklayer.hpp  tokenresponsehandler.hpp
app/src/main/cpp/libaurav2/include/classes/callbacks/: inputcallback.hpp  levelimportcallback.hpp  reloadgamecallback.hpp  showloadingcirclecallback.hpp
app/src/main/cpp/libaurav2/include/classes/extensions/: gjaccountmanagerext.hpp  gjcommentext.hpp  gjsearchobjectext.hpp  playlayerext.hpp
app/src/main/cpp/libaurav2/include/classes/managers/: controllermanager.hpp  outfitmanager.hpp
app/src/main/cpp/libaurav2/include/classes/settings/: settingpages.hpp  settingspage.hpp  settingspopup.hpp  texturesettingspopup.hpp  togglesettingspage.hpp
app/src/main/cpp/libaurav2/include/classes/settings/pages/: aboutsettingspage.hpp  editorsettingspage.hpp  gameplaysettingspage.hpp  graphicssettingspage.hpp  interfacesettingspage.hpp  songssettingspage.hpp  tweakssettingspage.hpp
app/src/main/cpp/libaurav2/include/classes/speedhack/: speedhacklifecyclewatcher.hpp  speedhackmanagercard.hpp
app/src/main/cpp/libaurav2/include/modules/: badges.hpp  default.hpp  editor.hpp  hacks.hpp  icons.hpp  input.hpp  levels.hpp  modules.hpp  overlay.hpp  search.hpp  settings.hpp  share.hpp  textures.hpp  token.hpp  urls.hpp
app/src/main/cpp/libaurav2/include/modules/hacks/: speedhack.hpp
app/src/main/cpp/libaurav2/src/: aura.cpp
app/src/main/cpp/libaurav2/src/base/: hook_handler.cpp  hooks.cpp  jni_funcs.cpp  module.cpp
app/src/main/cpp/libaurav2/src/classes/: advancedcolorselectwidget.cpp  controlleroverlay.cpp  crashhelperpopup.cpp  loadingfailedhijacklayer.cpp  tokenresponsehandler.cpp
app/src/main/cpp/libaurav2/src/classes/callbacks/: inputcallback.cpp  levelimportcallback.cpp  reloadgamecallback.cpp  showloadingcirclecallback.cpp
app/src/main/cpp/libaurav2/src/classes/managers/: controllermanager.cpp  outfitmanager.cpp
app/src/main/cpp/libaurav2/src/classes/settings/: settingspage.cpp  settingspopup.cpp  texturesettingspopup.cpp  togglesettingspage.cpp
app/src/main/cpp/libaurav2/src/classes/settings/pages/: aboutsettingspage.cpp  editorsettingspage.cpp  gameplaysettingspage.cpp  graphicssettingspage.cpp  interfacesettingspage.cpp  songssettingspage.cpp  tweakssettingspage.cpp
app/src/main/cpp/libaurav2/src/classes/speedhack/: speedhackmanagercard.cpp
app/src/main/cpp/libaurav2/src/modules/: badges.cpp  default.cpp  editor.cpp  hacks.cpp  icons.cpp  input.cpp  levels.cpp  overlay.cpp  search.cpp  settings.cpp  share.cpp  textures.cpp  token.cpp  urls.cpp
app/src/main/cpp/libaurav2/src/modules/hacks/: speedhack.cpp
app/src/main/java/com/customRobTop/: BaseRobTopActivity.kt
app/src/main/java/com/kyurime/geometryjump/: BaseGeometryDashActivity.kt  ConstrainedFrameLayout.kt  GJConstants.kt  ModGlue.kt
app/src/main/java/org/cocos2dx/lib/: Cocos2dxGLSurfaceView.kt  Cocos2dxHelper.kt  Cocos2dxRenderer.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
assets/GJ_badgeSheet/: GJ_badgeSheet.ssp
assets/GJ_modificationsSheet/: GJ_modificationsSheet.ssp
aurav2/: .clang-tidy  CMakeLists.txt
aurav2/include/base/: cmake_config.hpp.in  config.hpp  hook_handler.hpp  hooks.hpp  module.hpp  spdlog_fill.hpp
aurav2/include/modules/: badges.hpp  default.hpp  hacks.hpp  limits.hpp  modules.hpp  overlay.hpp  search.hpp  settings.hpp  textures.hpp  token.hpp  urls.hpp
aurav2/src/: aura.cpp
aurav2/src/base/: hooks.cpp
aurav2/src/modules/: badges.cpp  default.cpp  hacks.cpp  levels.cpp  limits.cpp  overlay.cpp  search.cpp  settings.cpp  textures.cpp  token.cpp  urls.cpp
docs/: README.md  build-config.md  ingame-config.md
gradle/wrapper/: gradle-wrapper.properties
patch/: DELETE_LIST
patch/files/: AndroidManifest.xml  apktool.yml
patch/files/assets/: GJ_badgeSheet-hd.plist  GJ_badgeSheet-uhd.plist  GJ_badgeSheet.plist  GJ_modificationsSheet-uhd.plist  GJ_modificationsSheet.plist  LevelData.plist  bigFont-uhd.fnt  chatFont-uhd.fnt  goldFont-uhd.fnt
patch/files/res/values/: strings.xml
patch/files/smali/com/kyurime/geometryjump/: BuildConfig.smali  GeometryJump.smali  R$attr.smali  R$color.smali  R$drawable.smali  R$id.smali  R$integer.smali  R$layout.smali  R$string.smali  R$style.smali  R$styleable.smali  R.smali
patch/files/smali/org/cocos2dx/lib/: Cocos2dxGLSurfaceView$14.smali  Cocos2dxGLSurfaceView$15.smali  Cocos2dxGLSurfaceView.smali  Cocos2dxRenderer.smali
